--- a/StudentInfoSystem/MainWindow.xaml
+++ b/StudentInfoSystem/MainWindow.xaml
@@ -1,42 +1,130 @@
-﻿<Window x:Class="StudentInfoSystem.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StudentInfoSystem"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="StudentInfoSystem.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:StudentInfoSystem"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="800"
+    Height="520"
+    mc:Ignorable="d">
     <Grid x:Name="MainGrid">
-        <GroupBox Header="Студентска информация" HorizontalAlignment="Left" Height="171" Margin="10,139,0,0" VerticalAlignment="Top" Width="737" Content=""/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition Width="auto"/>
+        </Grid.ColumnDefinitions>
 
-        <GroupBox Header="Лични Данни" HorizontalAlignment="Left" Height="119" Margin="10,15,0,0" VerticalAlignment="Top" Width="473" Content=""/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,39,0,0" TextWrapping="Wrap" Text="Име:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,67,0,0" TextWrapping="Wrap" Text="Презиме:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,95,0,0" TextWrapping="Wrap" Text="Фамилия" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="486,215,0,0" TextWrapping="Wrap" Text="Група:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="486,187,0,0" TextWrapping="Wrap" Text="Поток:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="486,159,0,0" TextWrapping="Wrap" Text="Курс:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,271,0,0" TextWrapping="Wrap" Text="Фак. номер:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,243,0,0" TextWrapping="Wrap" Text="Статус:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,215,0,0" TextWrapping="Wrap" Text="ОКС:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,187,0,0" TextWrapping="Wrap" Text="Специалност:" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Height="23" Margin="35,159,0,0" TextWrapping="Wrap" Text="Факултет" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="name_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,39,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="sec_name_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,67,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="last_name_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,95,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="faculty_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,159,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="spec_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,187,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="degree_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="status_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,243,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="fac_num_txtbox" HorizontalAlignment="Left" Height="23" Margin="160,271,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304"/>
-        <TextBox x:Name="course_txtbox" HorizontalAlignment="Left" Height="23" Margin="611,159,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109"/>
-        <TextBox x:Name="flow_txtbox" HorizontalAlignment="Left" Height="23" Margin="611,187,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109"/>
-        <TextBox x:Name="group_txtbox" HorizontalAlignment="Left" Height="23" Margin="611,215,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109"/>
-        <Button x:Name="clear_all_butt" Content="clear_all_butt" HorizontalAlignment="Left" Margin="46,346,0,0" VerticalAlignment="Top" Width="75" Click="clear_all_butt_Click"/>
-        <Button x:Name="send_student_butt" Content="send_student_butt" HorizontalAlignment="Left" Margin="141,346,0,0" VerticalAlignment="Top" Width="75" Click="send_student_butt_Click"/>
-        <Button x:Name="deactivate_butt" Content="deactivate_butt" HorizontalAlignment="Left" Margin="247,346,0,0" VerticalAlignment="Top" Width="75" Click="deactivate_butt_Click"/>
-        <Button x:Name="activate_butt" Content="activate_butt" HorizontalAlignment="Left" Margin="339,346,0,0" VerticalAlignment="Top" Width="75" Click="activate_butt_Click"/>
-        <Button x:Name="_TestStud_butt" Content="_TestStud_butt" HorizontalAlignment="Left" Margin="501,357,0,0" VerticalAlignment="Top" Width="75" Click="_TestStud_butt_Click"/>
+        <GroupBox Header="Снимка" VerticalAlignment="Center" Width="200" Grid.Column="0">
+            <Image Source="no image found.png"   />
+        </GroupBox>
+        <GroupBox Header="Лични Данни" HorizontalAlignment="Left" Height="120" Width="473" Margin="10,15,0,0" VerticalAlignment="Top"  Grid.Column="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Име:" VerticalAlignment="Top" Width="120"  Grid.Column="0" Grid.Row="0"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Презиме:" VerticalAlignment="Top" Width="120"  Grid.Column="0" Grid.Row="1"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Фамилия" VerticalAlignment="Top" Width="120"  Grid.Column="0" Grid.Row="2"/>
+
+                <TextBox x:Name="name_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304" Grid.Column="1" Grid.Row="0"/>
+                <TextBox x:Name="sec_name_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304" Grid.Column="1" Grid.Row="1"/>
+                <TextBox x:Name="last_name_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="304" Grid.Column="1" Grid.Row="2"/>
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Header="Студентска информация" HorizontalAlignment="Left" Height="171" Width="500" Margin="10,139,0,0" VerticalAlignment="Top" Grid.Column="1" >
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Факултет" VerticalAlignment="Top" Width="120" Grid.Column="0" Grid.Row="0"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Специалност:" VerticalAlignment="Top" Width="120" Grid.Column="0" Grid.Row="1"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="ОКС:" VerticalAlignment="Top" Width="120" Grid.Column="0" Grid.Row="2"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Статус:" VerticalAlignment="Top" Width="120" Grid.Column="0" Grid.Row="3"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Фак. номер:" VerticalAlignment="Top" Width="120" Grid.Column="0" Grid.Row="4"/>
+                <TextBox x:Name="faculty_txtbox" HorizontalAlignment="Left" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Grid.Column="1" Grid.Row="0"/>
+                <TextBox x:Name="spec_txtbox" HorizontalAlignment="Left" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Grid.Column="1" Grid.Row="1"/>
+                <TextBox x:Name="degree_txtbox" HorizontalAlignment="Left" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Grid.Column="1" Grid.Row="2"/>
+                <TextBox x:Name="status_txtbox" HorizontalAlignment="Left" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Grid.Column="1" Grid.Row="3"/>
+                <TextBox x:Name="fac_num_txtbox" HorizontalAlignment="Left" Height="23"  TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="100" Grid.Column="1" Grid.Row="4"/>
+
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Група:" VerticalAlignment="Top" Width="120" Grid.Column="2" Grid.Row="0"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Поток:" VerticalAlignment="Top" Width="120" Grid.Column="2" Grid.Row="1"/>
+                <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="Курс:" VerticalAlignment="Top" Width="120" Grid.Column="2" Grid.Row="2"/>
+                <TextBox x:Name="course_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109" Grid.Column="3" Grid.Row="0"/>
+                <TextBox x:Name="flow_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109" Grid.Column="3" Grid.Row="1"/>
+                <TextBox x:Name="group_txtbox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="109" Grid.Column="3" Grid.Row="2"/>
+            </Grid>
+        </GroupBox>
+        <Button
+            x:Name="clear_all_butt"
+            Grid.Column="1"
+            Width="75"
+            Margin="46,346,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="ClearAllButt_Click"
+            Content="ClearAll" />
+        <Button
+            x:Name="send_student_butt"
+            Grid.Column="1"
+            Width="75"
+            Margin="141,346,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="SendStudentButt_Click"
+            Content="Fill" />
+        <Button
+            x:Name="deactivate_butt"
+            Grid.Column="1"
+            Width="75"
+            Margin="247,346,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="DeactivateButt_Click"
+            Content="Deactivate" />
+        <Button
+            x:Name="activate_butt"
+            Grid.Column="1"
+            Width="75"
+            Margin="339,346,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="ActivateButt_Click"
+            Content="Activate" />
+        <Button
+            x:Name="showTestUser"
+            Grid.Column="1"
+            Width="76"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Click="ShowTestUser_Click"
+            Content="Show Test Data" Margin="424,346,0,0" />
+        <Label
+            x:Name="MessageLbl"
+            Margin="10,384,53,10"
+            HorizontalContentAlignment="Center"
+            FontWeight="Bold"
+            VerticalContentAlignment="Center"
+            FontSize="50"
+            Foreground="Red" Grid.ColumnSpan="2" />
 
     </Grid>
 </Window>
