--- a/ExpenseIt/ExpenseItHome.xaml
+++ b/ExpenseIt/ExpenseItHome.xaml
@@ -22,7 +22,11 @@
             <RowDefinition Height="2*" />
             <RowDefinition Height="0.5*" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1" Grid.Column="1" x:Name="GridHeight"/>
+        <ListBox Grid.Row="1" ItemsSource="{Binding Path=PersonsChecked}"/>
+        <Grid
+            x:Name="GridHeight"
+            Grid.Row="1"
+            Grid.Column="1" />
         <Label
             Grid.Column="1"
             HorizontalAlignment="Center"
@@ -40,8 +44,12 @@
                 <Label VerticalAlignment="Center" Foreground="White">Names</Label>
             </Border>
 
-            <ScrollViewer VerticalScrollBarVisibility="Auto" >
-                <ListBox Height="{Binding ElementName=GridHeight, Path=ActualHeight}" Name="peopleListBox" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=ExpenseDataSource}">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <ListBox
+                    Name="peopleListBox"
+                    Height="{Binding ElementName=GridHeight, Path=ActualHeight}"
+                    ItemsSource="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=ExpenseDataSource}"
+                    SelectionChanged="peopleListBox_SelectionChanged_1">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Label Content="{Binding Path=Name}" />
