--- a/ExpenseIt/MainWindow.xaml
+++ b/ExpenseIt/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="Expenselt.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Expenselt"
-        mc:Ignorable="d"
-        Title="Expenselt" Height="420" Width="720">
-    <Grid>
-
-    </Grid>
+﻿<Window
+    x:Class="Expenselt.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Expenselt"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Expenselt"
+    Width="720"
+    Height="420"
+    mc:Ignorable="d">
+    <Grid />
 </Window>
