--- a/MinimalMVVM/View/MainWindow.xaml
+++ b/MinimalMVVM/View/MainWindow.xaml
@@ -1,26 +1,49 @@
-﻿<Window x:Class="MinimalMVVM.View.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:ViewModel="clr-namespace:MinimalMVVM.ViewModel"
-        Title="MainWindow" Height="366" Width="300"
-        mc:Ignorable="d">
+﻿<Window
+    x:Class="MinimalMVVM.View.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ViewModel="clr-namespace:MinimalMVVM.ViewModel"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="300"
+    Height="366"
+    mc:Ignorable="d">
     <Window.DataContext>
-        <ViewModel:Presenter/>
+        <ViewModel:Presenter />
     </Window.DataContext>
     <Window.InputBindings>
-        <KeyBinding Key="Enter" Command="{Binding ConvertTextCommand}"/>
+        <KeyBinding Key="Enter" Command="{Binding ConvertTextCommand}" />
     </Window.InputBindings>
     <StackPanel Height="336">
-        <Label Foreground="Blue" Margin="5,5,5,0">Text To Convert</Label>
-        <TextBox Text="{Binding SomeText, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
-        <Label Foreground="Blue" Margin="5,5,5,0">History</Label>
-        <ListBox   Height="160" Margin="5" ItemsSource="{Binding History}"/>
+        <Label Margin="5,5,5,0" Foreground="Blue">Text To Convert</Label>
+        <TextBox Margin="5" Text="{Binding SomeText, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Margin="5,5,5,0" Foreground="Blue">History</Label>
+        <ListBox
+            Height="160"
+            Margin="5"
+            ItemsSource="{Binding History}" />
         <Grid>
-            <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="80"  Command="{Binding ConvertTextCommand}" Content="Convert"/>
-            <Button x:Name="ToHigh" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="80"  Content="to high" Click="Button_Click_to_high" />
-            <Button x:Name="ToLow" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="80"  Content="to low" Click="Button_Click_to_low" />
+            <Button
+                Width="80"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Bottom"
+                Command="{Binding ConvertTextCommand}"
+                Content="Convert" />
+            <Button
+                x:Name="ToHigh"
+                Width="80"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Click="Button_Click_to_high"
+                Content="to high" />
+            <Button
+                x:Name="ToLow"
+                Width="80"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Click="Button_Click_to_low"
+                Content="to low" />
         </Grid>
     </StackPanel>
 </Window>
