--- a/StudentInfoSystem/LoginWindow.xaml
+++ b/StudentInfoSystem/LoginWindow.xaml
@@ -1,28 +1,41 @@
-﻿<Window x:Class="StudentInfoSystem.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StudentInfoSystem"
-        mc:Ignorable="d"
-        Title="LoginWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="StudentInfoSystem.LoginWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:StudentInfoSystem"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="LoginWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1">
+        <StackPanel
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
             <StackPanel Margin="10" Orientation="Horizontal">
-                <Label Content="Username: "/>
-                <TextBox Width="100" x:Name="Username"/>
+                <Label Content="Username: " />
+                <TextBox
+                    x:Name="Username"
+                    Width="100"
+                    Text="{Binding User.Username}" />
             </StackPanel>
             <StackPanel Margin="10" Orientation="Horizontal">
-                <Label Content="Password: " x:Name="Password"/>
-                <TextBox Width="100" Text="{Binding User.Password}"/>
+                <Label x:Name="Password" Content="Password: " />
+                <TextBox Width="100" Text="{Binding User.Password}" />
             </StackPanel>
-            <Button Margin="10" Content="Login" Click="Button_Click" />
+            <Button
+                Margin="10"
+                Command="{Binding LoginCommand}"
+                Content="Login" />
         </StackPanel>
     </Grid>
 </Window>
